--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,3 +1,41 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+      "browser": true,
+      "es2021": true
+  },
+  "extends": [
+      "next/core-web-vitals",
+      "plugin:react/recommended",
+      "airbnb",
+      "plugin:react/jsx-runtime"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+      "ecmaFeatures": {
+          "jsx": true
+      },
+      "ecmaVersion": "latest"
+  },
+  "plugins": [
+      "react",
+      "@typescript-eslint"
+  ],
+  "rules": {
+      "max-len": ["error", { "code": 150 }],
+      "import/extensions": 0,
+      "react/jsx-filename-extension": 0,
+      "import/no-unresolved": 0,
+      "react/function-component-definition": 0,
+      "import/prefer-default-export": 0,
+      "jsx-a11y/no-noninteractive-element-interactions": 0,
+      "jsx-a11y/click-events-have-key-events": 0,
+      "jsx-a11y/anchor-is-valid": 0,
+      "linebreak-style": "off",
+      "import/no-cycle": 0,
+      "react/jsx-props-no-spreading": 0
+  },
+  "globals": {
+      "JSX": true
+  }
 }
+
