--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "node web server for rmhtc web platform",
   "main": "app.js",
   "scripts": {
+    "migrate:up": "npx cross-env NODE_ENV=local sequelize-cli db:migrate",
+    "migrate:undo": "npx cross-env NODE_ENV=local sequelize-cli db:migrate:undo",
     "start:local": "cross-env NODE_ENV=local nodemon -r dotenv/config app.js",
     "start:dev": "cross-env NODE_ENV=development node -r dotenv/config app.js",
     "start:prod": "cross-env NODE_ENV=production node -r dotenv/config app.js"
