--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -4,7 +4,8 @@
     "password": "root",
     "database": "rmhtc_local",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "development": {
     "username": "root",
