--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.32.2",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
