--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,31 +12,34 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "framer-motion": "^6.3.11",
+    "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.2",
     "react-redux": "^8.0.2",
+    "react-select": "^5.3.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "eslint": "8.15.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.6",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "typescript": "4.6.4",
     "stylelint": "^14.8.4",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-order-config-standard": "^0.1.3"
+    "stylelint-order-config-standard": "^0.1.3",
+    "typescript": "4.6.4"
   }
 }
