--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
+    "cookie": "^0.5.0",
     "framer-motion": "^6.3.11",
     "js-cookie": "^3.0.1",
     "next": "12.1.6",
@@ -23,6 +24,7 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
