--- a/frontend/.stylelintrc.json
+++ b/frontend/.stylelintrc.json
@@ -1,17 +1,10 @@
 {
-	"extends": [
-		"stylelint-config-standard",
-		"stylelint-order-config-standard"
-	],
-	"plugins": [
-		"stylelint-order"
-	],
-	"rules": {
-		"indentation": [
-			"tab"
-		],
-		"color-hex-case": "upper",
-		"selector-class-pattern": null,
-		"custom-property-pattern": null
-	}
+  "extends": ["stylelint-config-standard", "stylelint-config-css-modules", "stylelint-order-config-standard"],
+  "plugins": ["stylelint-order"],
+  "rules": {
+    "indentation": ["tab"],
+    "color-hex-case": "upper",
+    "selector-class-pattern": null,
+    "custom-property-pattern": null
+  }
 }
