fix/ for loop removed, add active class in pagination

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -32,7 +32,8 @@
       "jsx-a11y/anchor-is-valid": 0,
       "linebreak-style": "off",
       "import/no-cycle": 0,
-      "react/jsx-props-no-spreading": 0
+      "react/jsx-props-no-spreading": 0,
+      "@typescript-eslint/no-unused-vars": 0
   },
   "globals": {
       "JSX": true
