--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,6 @@
     "migrate:undo": "npx sequelize-cli db:migrate:undo",
     "seed:up": "npx sequelize-cli db:seed:all",
     "seed:undo": "npx sequelize-cli db:seed:undo:all",
-
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -35,8 +34,10 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "handlebars": "^4.7.7",
+    "nestjs-minio-client": "^1.2.0",
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
