--- a/backend/package.json
+++ b/backend/package.json
@@ -27,9 +27,12 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.3.17",
+    "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.11",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^5.2.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
