--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -33,7 +33,8 @@
       "linebreak-style": "off",
       "import/no-cycle": 0,
       "react/jsx-props-no-spreading": 0,
-      "@typescript-eslint/no-unused-vars": 0
+      "@typescript-eslint/no-unused-vars": 0,
+      "no-console": 0
   },
   "globals": {
       "JSX": true
