--- a/frontend/.stylelintrc.json
+++ b/frontend/.stylelintrc.json
@@ -1,10 +1,590 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-css-modules", "stylelint-order-config-standard"],
+  "extends": [ "stylelint-order-config-standard"],
   "plugins": ["stylelint-order"],
   "rules": {
     "indentation": ["tab"],
-    "color-hex-case": "upper",
     "selector-class-pattern": null,
-    "custom-property-pattern": null
+    "custom-property-pattern": null,
+    "alpha-value-notation": [
+			"percentage",
+			{
+				"exceptProperties": [
+					"opacity",
+					"fill-opacity",
+					"flood-opacity",
+					"stop-opacity",
+					"stroke-opacity"
+				]
+			}
+		],
+		"at-rule-empty-line-before": [
+			"always",
+			{
+				"except": ["blockless-after-same-name-blockless", "first-nested"],
+				"ignore": ["after-comment"]
+			}
+		],
+		"at-rule-name-case": "lower",
+		"at-rule-name-space-after": "always-single-line",
+		"at-rule-no-vendor-prefix": true,
+		"at-rule-semicolon-newline-after": "always",
+		"block-closing-brace-empty-line-before": "never",
+		"block-closing-brace-newline-after": "always",
+		"block-closing-brace-newline-before": "always-multi-line",
+		"block-closing-brace-space-before": "always-single-line",
+		"block-opening-brace-newline-after": "always-multi-line",
+		"block-opening-brace-space-after": "always-single-line",
+		"block-opening-brace-space-before": "always",
+		"color-function-notation": "modern",
+		"color-hex-case": "upper",
+		"color-hex-length": "short",
+		"comment-empty-line-before": [
+			"always",
+			{
+				"except": ["first-nested"],
+				"ignore": ["stylelint-commands"]
+			}
+		],
+		"comment-whitespace-inside": "always",
+		"custom-property-empty-line-before": [
+			"always",
+			{
+				"except": ["after-custom-property", "first-nested"],
+				"ignore": ["after-comment", "inside-single-line-block"]
+			}
+		],
+		"custom-media-pattern": [
+			"^([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
+			{
+				"message": "Expected custom media query name to be kebab-case"
+			}
+		],
+		"declaration-bang-space-after": "never",
+		"declaration-bang-space-before": "always",
+		"declaration-block-semicolon-newline-after": "always-multi-line",
+		"declaration-block-semicolon-space-after": "always-single-line",
+		"declaration-block-semicolon-space-before": "never",
+		"declaration-block-single-line-max-declarations": 1,
+		"declaration-block-trailing-semicolon": "always",
+		"declaration-block-no-redundant-longhand-properties": true,
+		"declaration-colon-newline-after": "always-multi-line",
+		"declaration-colon-space-after": "always-single-line",
+		"declaration-colon-space-before": "never",
+		"font-family-name-quotes": "always-where-recommended",
+		"function-comma-newline-after": "always-multi-line",
+		"function-comma-space-after": "always-single-line",
+		"function-comma-space-before": "never",
+		"function-max-empty-lines": 0,
+		"function-name-case": "lower",
+		"function-parentheses-newline-inside": "always-multi-line",
+		"function-parentheses-space-inside": "never-single-line",
+		"function-url-quotes": "always",
+		"function-whitespace-after": "always",
+		"hue-degree-notation": "angle",
+		"import-notation": "string",
+		"length-zero-no-unit": true,
+		"max-empty-lines": 1,
+		"max-line-length": 120,
+		"media-feature-colon-space-after": "always",
+		"media-feature-colon-space-before": "never",
+		"media-feature-name-case": "lower",
+		"media-feature-name-no-vendor-prefix": true,
+		"media-feature-parentheses-space-inside": "never",
+		"media-feature-range-operator-space-after": "always",
+		"media-feature-range-operator-space-before": "always",
+		"media-query-list-comma-newline-after": "always-multi-line",
+		"media-query-list-comma-space-after": "always-single-line",
+		"media-query-list-comma-space-before": "never",
+		"no-empty-first-line": true,
+		"no-eol-whitespace": true,
+		"no-missing-end-of-source-newline": true,
+		"number-leading-zero": "always",
+		"number-max-precision": 4,
+		"number-no-trailing-zeros": true,
+		"property-case": "lower",
+		"property-no-vendor-prefix": true,
+		"rule-empty-line-before": [
+			"always-multi-line",
+			{
+				"except": ["first-nested"],
+				"ignore": ["after-comment"]
+			}
+		],
+		"selector-attribute-brackets-space-inside": "never",
+		"selector-attribute-operator-space-after": "never",
+		"selector-attribute-operator-space-before": "never",
+		"selector-attribute-quotes": "always",
+		"selector-combinator-space-after": "always",
+		"selector-combinator-space-before": "always",
+		"selector-descendant-combinator-no-non-space": true,
+		"selector-id-pattern": [
+			"^([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
+			{
+				"message": "Expected id selector to be kebab-case"
+			}
+		],
+		"selector-list-comma-newline-after": "always",
+		"selector-list-comma-space-before": "never",
+		"selector-max-empty-lines": 0,
+		"selector-no-vendor-prefix": true,
+		"selector-not-notation": "complex",
+		"selector-pseudo-class-case": "lower",
+		"selector-pseudo-class-parentheses-space-inside": "never",
+		"selector-pseudo-element-case": "lower",
+		"selector-pseudo-element-colon-notation": "double",
+		"selector-type-case": "lower",
+		"shorthand-property-no-redundant-values": true,
+		"string-quotes": "double",
+		"unit-case": "lower",
+		"value-keyword-case": "lower",
+		"value-list-comma-newline-after": "always-multi-line",
+		"value-list-comma-space-after": "always-single-line",
+		"value-list-comma-space-before": "never",
+		"value-list-max-empty-lines": 0,
+		"value-no-vendor-prefix": true,
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": [
+          "export",
+          "import",
+          "global",
+          "local",
+          "external"
+        ]
+      }
+    ],
+    "selector-type-no-unknown": [
+      true,
+      {
+        "ignoreTypes": ["from"]
+      }
+    ],
+    "property-no-unknown": [
+      true,
+      {
+        "ignoreProperties": ["composes", "compose-with"],
+        "ignoreSelectors": [":export", "/^:import/"]
+      }
+    ],
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["value"]
+      }
+    ],
+    "function-no-unknown": [
+      true,
+      {
+        "ignoreFunctions": ["global"]
+      }
+    ]
+  },
+  "declaration-empty-line-before": null,
+    "order/order": [
+      "custom-properties",
+      "dollar-variables",
+      "at-variables",
+      "declarations",
+      "rules",
+      "at-rules",
+      "less-mixins"
+    ],
+    "order/properties-order": [
+      {
+        "emptyLineBefore": "never",
+        "properties": [
+          "position",
+          "z-index",
+          "top",
+          "right",
+          "bottom",
+          "left",
+          "color",
+          "font-size",
+          "display",
+          "background-image",
+          "border"
+        ]
+      },
+      {
+        "emptyLineBefore": "always",
+        "properties": [
+          "display",
+          "visibility",
+          "float",
+          "clear",
+          "overflow",
+          "overflow-x",
+          "overflow-y",
+          "-ms-overflow-x",
+          "-ms-overflow-y",
+          "-webkit-overflow-scrolling",
+          "clip",
+          "zoom",
+          "-webkit-align-content",
+          "-ms-flex-line-pack",
+          "align-content",
+          "-webkit-box-align",
+          "-moz-box-align",
+          "-webkit-align-items",
+          "align-items",
+          "-ms-flex-align",
+          "-webkit-align-self",
+          "-ms-flex-item-align",
+          "-ms-grid-row-align",
+          "align-self",
+          "-webkit-box-flex",
+          "-webkit-flex",
+          "-moz-box-flex",
+          "-ms-flex",
+          "flex",
+          "-webkit-flex-flow",
+          "-ms-flex-flow",
+          "flex-flow",
+          "-webkit-flex-basis",
+          "-ms-flex-preferred-size",
+          "flex-basis",
+          "-webkit-box-orient",
+          "-webkit-box-direction",
+          "-webkit-flex-direction",
+          "-moz-box-orient",
+          "-moz-box-direction",
+          "-ms-flex-direction",
+          "flex-direction",
+          "-webkit-flex-grow",
+          "-ms-flex-positive",
+          "flex-grow",
+          "-webkit-flex-shrink",
+          "-ms-flex-negative",
+          "flex-shrink",
+          "-webkit-flex-wrap",
+          "-ms-flex-wrap",
+          "flex-wrap",
+          "-webkit-box-pack",
+          "-moz-box-pack",
+          "-ms-flex-pack",
+          "-webkit-justify-content",
+          "justify-content",
+          "-webkit-box-ordinal-group",
+          "-webkit-order",
+          "-moz-box-ordinal-group",
+          "-ms-flex-order",
+          "order"
+        ]
+      },
+      {
+        "emptyLineBefore": "always",
+        "properties": [
+          "-webkit-box-sizing",
+          "-moz-box-sizing",
+          "box-sizing",
+          "width",
+          "min-width",
+          "max-width",
+          "height",
+          "min-height",
+          "max-height",
+          "margin",
+          "margin-top",
+          "margin-right",
+          "margin-bottom",
+          "margin-left",
+          "padding",
+          "padding-top",
+          "padding-right",
+          "padding-bottom",
+          "padding-left"
+        ]
+      },
+      {
+        "emptyLineBefore": "always",
+        "properties": [
+          "table-layout",
+          "empty-cells",
+          "caption-side",
+          "border-spacing",
+          "border-collapse",
+          "list-style",
+          "list-style-position",
+          "list-style-type",
+          "list-style-image"
+        ]
+      },
+      {
+        "emptyLineBefore": "always",
+        "properties": [
+          "content",
+          "quotes",
+          "counter-reset",
+          "counter-increment",
+          "resize",
+          "cursor",
+          "-webkit-user-select",
+          "-moz-user-select",
+          "-ms-user-select",
+          "user-select",
+          "nav-index",
+          "nav-up",
+          "nav-right",
+          "nav-down",
+          "nav-left",
+          "-webkit-transition",
+          "-moz-transition",
+          "-ms-transition",
+          "-o-transition",
+          "transition",
+          "-webkit-transition-delay",
+          "-moz-transition-delay",
+          "-ms-transition-delay",
+          "-o-transition-delay",
+          "transition-delay",
+          "-webkit-transition-timing-function",
+          "-moz-transition-timing-function",
+          "-ms-transition-timing-function",
+          "-o-transition-timing-function",
+          "transition-timing-function",
+          "-webkit-transition-duration",
+          "-moz-transition-duration",
+          "-ms-transition-duration",
+          "-o-transition-duration",
+          "transition-duration",
+          "-webkit-transition-property",
+          "-moz-transition-property",
+          "-ms-transition-property",
+          "-o-transition-property",
+          "transition-property",
+          "-webkit-transform",
+          "-moz-transform",
+          "-ms-transform",
+          "-o-transform",
+          "transform",
+          "-webkit-transform-origin",
+          "-moz-transform-origin",
+          "-ms-transform-origin",
+          "-o-transform-origin",
+          "transform-origin",
+          "-webkit-animation",
+          "-moz-animation",
+          "-ms-animation",
+          "-o-animation",
+          "animation",
+          "-webkit-animation-name",
+          "-moz-animation-name",
+          "-ms-animation-name",
+          "-o-animation-name",
+          "animation-name",
+          "-webkit-animation-duration",
+          "-moz-animation-duration",
+          "-ms-animation-duration",
+          "-o-animation-duration",
+          "animation-duration",
+          "-webkit-animation-play-state",
+          "-moz-animation-play-state",
+          "-ms-animation-play-state",
+          "-o-animation-play-state",
+          "animation-play-state",
+          "-webkit-animation-timing-function",
+          "-moz-animation-timing-function",
+          "-ms-animation-timing-function",
+          "-o-animation-timing-function",
+          "animation-timing-function",
+          "-webkit-animation-delay",
+          "-moz-animation-delay",
+          "-ms-animation-delay",
+          "-o-animation-delay",
+          "animation-delay",
+          "-webkit-animation-iteration-count",
+          "-moz-animation-iteration-count",
+          "-ms-animation-iteration-count",
+          "-o-animation-iteration-count",
+          "animation-iteration-count",
+          "-webkit-animation-direction",
+          "-moz-animation-direction",
+          "-ms-animation-direction",
+          "-o-animation-direction",
+          "animation-direction",
+          "text-align",
+          "-webkit-text-align-last",
+          "-moz-text-align-last",
+          "-ms-text-align-last",
+          "text-align-last",
+          "vertical-align",
+          "white-space",
+          "text-decoration",
+          "text-emphasis",
+          "text-emphasis-color",
+          "text-emphasis-style",
+          "text-emphasis-position",
+          "text-indent",
+          "-ms-text-justify",
+          "text-justify",
+          "text-transform",
+          "letter-spacing",
+          "word-spacing",
+          "-ms-writing-mode",
+          "text-outline",
+          "text-transform",
+          "text-wrap",
+          "text-overflow",
+          "-ms-text-overflow",
+          "text-overflow-ellipsis",
+          "text-overflow-mode",
+          "-ms-word-wrap",
+          "word-wrap",
+          "word-break",
+          "-ms-word-break",
+          "-moz-tab-size",
+          "-o-tab-size",
+          "tab-size",
+          "-webkit-hyphens",
+          "-moz-hyphens",
+          "hyphens",
+          "pointer-events"
+        ]
+      },
+      {
+        "emptyLineBefore": "always",
+        "properties": [
+          "opacity",
+          "filter:progid:DXImageTransform.Microsoft.Alpha(Opacity",
+          "-ms-filter:\\'progid:DXImageTransform.Microsoft.Alpha",
+          "-ms-interpolation-mode",
+          "color",
+          "border",
+          "border-collapse",
+          "border-width",
+          "border-style",
+          "border-color",
+          "border-top",
+          "border-top-width",
+          "border-top-style",
+          "border-top-color",
+          "border-right",
+          "border-right-width",
+          "border-right-style",
+          "border-right-color",
+          "border-bottom",
+          "border-bottom-width",
+          "border-bottom-style",
+          "border-bottom-color",
+          "border-left",
+          "border-left-width",
+          "border-left-style",
+          "border-left-color",
+          "-webkit-border-radius",
+          "-moz-border-radius",
+          "border-radius",
+          "-webkit-border-top-left-radius",
+          "-moz-border-radius-topleft",
+          "border-top-left-radius",
+          "-webkit-border-top-right-radius",
+          "-moz-border-radius-topright",
+          "border-top-right-radius",
+          "-webkit-border-bottom-right-radius",
+          "-moz-border-radius-bottomright",
+          "border-bottom-right-radius",
+          "-webkit-border-bottom-left-radius",
+          "-moz-border-radius-bottomleft",
+          "border-bottom-left-radius",
+          "-webkit-border-image",
+          "-moz-border-image",
+          "-o-border-image",
+          "border-image",
+          "-webkit-border-image-source",
+          "-moz-border-image-source",
+          "-o-border-image-source",
+          "border-image-source",
+          "-webkit-border-image-slice",
+          "-moz-border-image-slice",
+          "-o-border-image-slice",
+          "border-image-slice",
+          "-webkit-border-image-width",
+          "-moz-border-image-width",
+          "-o-border-image-width",
+          "border-image-width",
+          "-webkit-border-image-outset",
+          "-moz-border-image-outset",
+          "-o-border-image-outset",
+          "border-image-outset",
+          "-webkit-border-image-repeat",
+          "-moz-border-image-repeat",
+          "-o-border-image-repeat",
+          "border-image-repeat",
+          "outline",
+          "outline-width",
+          "outline-style",
+          "outline-color",
+          "outline-offset",
+          "background",
+          "filter:progid:DXImageTransform.Microsoft.AlphaImageLoader",
+          "background-color",
+          "background-image",
+          "background-repeat",
+          "background-attachment",
+          "background-position",
+          "background-position-x",
+          "-ms-background-position-x",
+          "background-position-y",
+          "-ms-background-position-y",
+          "-webkit-background-clip",
+          "-moz-background-clip",
+          "background-clip",
+          "background-origin",
+          "-webkit-background-size",
+          "-moz-background-size",
+          "-o-background-size",
+          "background-size",
+          "box-decoration-break",
+          "-webkit-box-shadow",
+          "-moz-box-shadow",
+          "box-shadow",
+          "filter:progid:DXImageTransform.Microsoft.gradient",
+          "-ms-filter:\\'progid:DXImageTransform.Microsoft.gradient",
+          "text-shadow"
+        ]
+      },
+      {
+        "emptyLineBefore": "always",
+        "properties": [
+          "font",
+          "font-family",
+          "font-size",
+          "font-weight",
+          "font-style",
+          "font-variant",
+          "font-size-adjust",
+          "font-stretch",
+          "font-effect",
+          "font-emphasize",
+          "font-emphasize-position",
+          "font-emphasize-style",
+          "font-smooth",
+          "line-height"
+        ]
+      }
+    ],
+  "overrides": [
+        {
+      "files": "**/*.scss",
+      "plugins": ["stylelint-scss"],
+      "rules": {
+        "at-rule-no-unknown": null,
+        "scss/at-rule-no-unknown": [
+          true,
+          {
+            "ignoreAtRules": ["value"]
+          }
+        ],
+        "function-no-unknown": null,
+        "scss/function-no-unknown": [
+          true,
+          {
+            "ignoreFunctions": ["global"]
+          }
+        ]
+      }
+    }
+  ]
   }
-}
+
