--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "cookie": "^0.5.0",
     "framer-motion": "^6.5.1",
     "js-cookie": "^3.0.1",
+    "nanoid": "^4.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
