--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,8 @@
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^5.2.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
