--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^8.0.2",
     "react-select": "^5.4.0",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
