--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^2.1.3",
     "@reduxjs/toolkit": "^1.8.3",
+    "@storybook/addon-docs": "^6.5.12",
     "cookie": "^0.5.0",
     "framer-motion": "^6.5.1",
     "js-cookie": "^3.0.1",
