--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-select": "^5.4.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "storybook-addon-next-router": "^4.0.0",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
